--- a/css/userprofilemanagement.css
+++ b/css/userprofilemanagement.css
@@ -1267,6 +1267,9 @@
   .userprofilemanagement .image-24-3elYpP {
     margin-top: 6%;
   }
+  .userprofilemanagement .image-22-y0eQTV {
+    margin-top: 17%;
+  }
 }
 
 
@@ -1626,6 +1629,9 @@
   }
   .userprofilemanagement .flex-col-Xi618D {
     margin-top: 7%;
+  }
+  .userprofilemanagement .click-on-profile-wqPdGv {
+    top: calc(33.23% - 10px);
   }
 }
 
