--- a/css/addfunds.css
+++ b/css/addfunds.css
@@ -1206,6 +1206,7 @@
     white-space: normal;
     width: 80%;
     line-height: 19px;
+    font-size: 10px !important;
   }
   .addfunds .select-the-paym-ent-by-currency-6G7QO0 {
     height: 29px;
